доделываю страницу и привязываю css файл

--- a/index.html
+++ b/index.html
@@ -1,39 +1,70 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Домашнее задание 2</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h2>Тут 1 часть задания</h2>
-    <p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. <br>Города маленький если не оксмокс диких пор ipsum щеке взобравшись, знаках деревни алфавит они которое всемогущая всеми снова силуэт. <br>Грамматики себя безопасную жизни скатился семантика взобравшись семь, его эта имеет всемогущая заманивший власти выйти текст подзаголовок вдали коварных коварный путь не однажды лучше пустился безорфографичный. <br>Наш продолжил страну на берегу за родного буквоград реторический. Взгляд маленький свою взобравшись! <br>Но заголовок великий семь вершину назад снова обеспечивает выйти проектах лучше своего, <br>подпоясал сбить даль он моей большого маленький ручеек буквенных, возвращайся толку, пояс страна рукопись собрал дорогу большой. <br>Меня текста дороге журчит.</p>
+    <p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. <br>Города маленький если
+        не оксмокс диких пор ipsum щеке взобравшись, знаках деревни алфавит они которое всемогущая всеми снова силуэт.
+        <br>Грамматики себя безопасную жизни скатился семантика взобравшись семь, его эта имеет всемогущая заманивший
+        власти выйти текст подзаголовок вдали коварных коварный путь не однажды лучше пустился безорфографичный. <br>Наш
+        продолжил страну на берегу за родного буквоград реторический. Взгляд маленький свою взобравшись! <br>Но
+        заголовок великий семь вершину назад снова обеспечивает выйти проектах лучше своего, <br>подпоясал сбить даль он
+        моей большого маленький ручеек буквенных, возвращайся толку, пояс страна рукопись собрал дорогу большой.
+        <br>Меня текста дороге журчит.
+    </p>
     <p>А тут я могу написать, что нибудь содержательное. У меня есть кот по кличке <b>Джек</b></p>
-    
-    <table>
-        <tr><td><img src="https://sun9-76.userapi.com/impg/Dno8aBCU4zEDL9h9EczohoTjRoZ6w4H_wrSVPg/29a_Iq2gJUY.jpg?size=1200x1600&quality=95&sign=2704d32347f8b129b534099c63208253&type=album" alt="Фото кота по кличке Джек" width="550"></td><td><img src="https://sun9-36.userapi.com/impg/z0Hpe-Kx7xLrDRAcx9BhmU2EDupuhNUSg84ywg/GRcD733BGmU.jpg?size=1200x1600&quality=95&sign=d16cf35bca93d5daae9157382e6b4eb6&type=album" alt="Другое фото кота по кличке Джек" width="550"></td></tr>
-    </table>
-    <hr>
 
     <table>
-        <tr><td>
-        <p>Я хочу:</p>
-            <ul>
-                <li><a href="https://pro2-bar-s3-cdn-cf1.myportfolio.com/8166c1f0301609c6f93a75ca966feeaf/922ad6009c6d8b0087854b5aa2092e211766bf96d1deac0ab8a33a6d9ca56b8c2f7380f4ec8607ad.png?h=d0501640d16f047203fe625350a3ed6d">Такую картину</a></li>
-                <li><a href="https://yandex.ru/maps/geo/blagoveshchensk/53067748/?ll=129.684301%2C48.516402&z=6">Посмотреть через реку</a></li>
-            </ul>
-        </tr></td>
-        <tr><td>
-            <p>Я уже умею</p>
-            <ol>
-                <li><a href="https://github.com/asrbacr">Создавать ссылку на <b><i>GitHub</i></b> </a></li>
-                <li><a href="https://gb.ru/users/8058294">Моя страница в GB</a></li>
-                <li><a href="https://vk.com/vassily93">VK</a></li>
-                <li><a href="https://t.me/EcoSnacks_Yar">Телеграмм</a></li>
-            </ol>
-            </ul>
-        </tr></td>
+        <tr>
+            <td><img class="verticalImage" src="https://sun9-76.userapi.com/impg/Dno8aBCU4zEDL9h9EczohoTjRoZ6w4H_wrSVPg/29a_Iq2gJUY.jpg?size=1200x1600&quality=95&sign=2704d32347f8b129b534099c63208253&type=album"
+                    alt="Фото кота по кличке Джек"></td>
+            <td><img class="verticalImage" src="https://sun9-36.userapi.com/impg/z0Hpe-Kx7xLrDRAcx9BhmU2EDupuhNUSg84ywg/GRcD733BGmU.jpg?size=1200x1600&quality=95&sign=d16cf35bca93d5daae9157382e6b4eb6&type=album"
+                    alt="Другое фото кота по кличке Джек"></td>
+        </tr>
     </table>
+    <hr>
+    <h2>Тут 2 часть задания</h2>
+    <table>
+        <tr>
+            <thead>
+                <th>
+                    <p>Я хочу:</p>
+                </th>
+                <th>
+                    <p>Где можно меня найти</p>
+                </th>
+            </thead>
+            <td>
+                <ul>
+                    <li><a
+                            href="https://pro2-bar-s3-cdn-cf1.myportfolio.com/8166c1f0301609c6f93a75ca966feeaf/922ad6009c6d8b0087854b5aa2092e211766bf96d1deac0ab8a33a6d9ca56b8c2f7380f4ec8607ad.png?h=d0501640d16f047203fe625350a3ed6d">Такую
+                            картину</a></li>
+                    <li><a href="https://yandex.ru/maps/geo/blagoveshchensk/53067748/?ll=129.684301%2C48.516402&z=6">Посмотреть
+                            через реку</a></li>
+                </ul>
+            </td>
+            <td>
+                <ol>
+                    <li><a href="https://github.com/asrbacr">Ссылка на <b><i>GitHub</i></b> </a></li>
+                    <li><a href="https://gb.ru/users/8058294">Моя страница в GB</a></li>
+                    <li><a href="https://vk.com/vassily93">VK</a></li>
+                    <li><a href="https://t.me/EcoSnacks_Yar">Телеграмм</a></li>
+                </ol>
+                </ul>
+            </td>
+        </tr>
+    </table>
+    <hr>
+    <h2>Тут 3 часть задания</h2>
+    <img class="horizonImage" src="image/image_in_site.jpg" alt="Изображение каллиграффити" width="1000">
 </body>
+
 </html>
